2004-01-12  Jakub Steiner <jimmac@ximian.com>

	* 48x48/mimetypes/Makefile.am
	* 48x48/mimetypes/gnome-mime-application-x-glade.png: glade
	  files. Fixes #130906

2004-01-12  Jakub Steiner <jimmac@ximian.com>

	* 96x96/filesystems/gnome-fs-directory-visiting.png
	* 72x72/filesystems/gnome-fs-directory-visiting.png
	* 48x48/filesystems/gnome-fs-directory-visiting.png
	* 36x36/filesystems/gnome-fs-directory-visiting.png
	* 24x24/filesystems/gnome-fs-directory-visiting.png
	* 12x12/filesystems/gnome-fs-directory-visiting.png: a stroke
	  works better than transparency/hue shift.

2004-01-12  Jakub Steiner <jimmac@ximian.com>

	* 16x16/stock/generic/Makefile.am
	* 16x16/stock/generic/stock_briefcase.png
	* 24x24/stock/generic/Makefile.am
	* 24x24/stock/generic/stock_briefcase.png
	* 32x32/stock/generic/Makefile.am
	* 32x32/stock/generic/stock_briefcase.png
	* 48x48/stock/generic/Makefile.am
	* 48x48/stock/generic/stock_briefcase.png: for Evolution

2004-01-12  Jakub Steiner <jimmac@ximian.com>

	* 48x48/apps/gnome-searchtool-animation.png
	* 48x48/apps/gnome-searchtool-animation-rest.png: the high
	  contrast icons are not ideal for this. Fixed.
	
2004-01-11  Dennis Cranston <dennis_cranston at yahoo.com>

	* 48x48/apps/gnome-searchtool-animation.png:  Small
	touch up.
	
2004-01-11  Dennis Cranston <dennis_cranston at yahoo.com>

	* 48x48/apps/gnome-searchtool-animation.png
	* 48x48/apps/gnome-searchtool-animation-rest.png
	* 48x48/apps/Makefile.am: Add gnome-search-tool animation files.
	
2004-01-04  Åsmund Skjæveland  <aasmunds@fys.uio.no>

	* configure.in: Added 'nn' to ALL_LINGUAS
	* po/nn.po: Added Norwegian Nynorsk translation

=== gnome-icon-theme 1.1.4 ===
	
2003-12-28  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Updates

	* Makefile.am:
	Added OrigTree to EXTRA_DIST.

2003-12-20  Arafat Medini <lumina@silverpen.de>

	* configure.in: Added Arabic locale "ar" to ALL_LINGUAS

2003-12-18  Jody Goldberg <jody@gnome.org>

	* configure.in : Add a pkgconfig file